<resources>

    <string name="app_name">ExceptionReport</string>

    <string name="alert_title">统计分析</string>
    <string name="alert_message">将要发送统计分析给开发者，需要附加您的用户名吗？</string>
    <string name="send_with_id">包含用户名</string>
    <string name="send_without_id">去掉用户名</string>
    <string name="alert_cancel">取消</string>

    <string name="login_do_login">登录</string>
    <string name="login_hint_id">用户名</string>
    <string name="login_hint_pw">密码</string>

    <string name="home_init_error">初始化错误</string>

    <string name="reset_db">清除统计分析</string>
    <string name="send_db_by_email">发送统计分析(邮件方式)</string>

    <string name="report_reset_db">清除统计分析</string>
    <string name="report_exit_app">退出app</string>

    <string name="report_is_null">没有任何统计记录或者被清空</string>
</resources>
