<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demo.AppAnalysisLoginDemoActivity">

    <Button
        android:id="@+id/buttonResetDB"
        android:textAllCaps="false"
        android:textSize="6pt"
        android:layout_margin="5dp"
        android:text="@string/reset_db"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSendExceptionEmail"
        android:textAllCaps="false"
        android:textSize="6pt"
        android:layout_margin="5dp"
        android:text="@string/send_db_by_email"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:id="@+id/editTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:textAllCaps="false"
            android:hint="@string/login_hint_id"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#0000"
            />

        <EditText
            android:maxLines="1"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:textAllCaps="false"
            android:hint="@string/login_hint_pw"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="9pt"
        android:textStyle="bold"
        android:text="@string/login_do_login"
        android:layout_marginTop="100dp"
        />
</FrameLayout>
