<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".applicationhandler.ui.AppCrashReportActivity"
    >

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSendExceptionEmail"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/send_db_by_email"
            android:textAllCaps="false"
            android:textSize="6pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:layout_marginBottom="30dp"
        android:id="@+id/buttonExit"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/report_exit_app"
        android:textSize="6pt"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonResetDB"
        android:text="@string/reset_db"
        android:textAllCaps="false"
        android:background="#0000"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>
